# SeaLantern

./: .SRCINFO  .editorconfig  .gitignore  .oxlintrc.json  CONTRIBUTING-en.md  CONTRIBUTING.md  PKGBUILD  README-en.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  updater.json
.github/: pull_request_template.md
.github/workflows/: check.yml  format-and-apply.yml  push-aur.yml  release.yml  sync-to-cnb.yml
docs/: AI_GUIDE.md  CONTRIBUTING.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: join.rs  mcs_plugin.rs  mod.rs  mods.rs  server.rs  server_id.rs  system.rs  update.rs  update_cnb.rs
src-tauri/src/models/: mcs_plugin.rs  mod.rs  server.rs  settings.rs
src-tauri/src/services/: global.rs  java_detector.rs  join_manager.rs  mcs_plugin_manager.rs  mod.rs  mod_manager.rs  server_id_manager.rs  server_manager.rs
src-tauri/src/utils/: cli.rs
src/api/: server.ts  settings.ts  system.ts  update.ts
src/data/: contributors.ts
src/language/: de-DE.json  en-US.json  es-ES.json  fr-FA.json  ja-JP.json  ko-KR.json  ru-RU.json  vi-VN.json  zh-CN.json  zh-TW.json
src/locales/: en-US.json  index.ts  zh-CN.json  zh-TW.json
src/router/: index.ts
src/stores/: i18nStore.ts  serverStore.ts  updateStore.ts
src/types/: server.ts
src/utils/: serverStatus.ts
src/views/: AboutView.vue  ConfigView.vue  ConsoleView.vue  CreateServerView.vue  HomeView.vue  PaintView.vue  PlayerView.vue  PluginPageView.vue  PluginsView.vue  SettingsView.vue
(+9 files in other folders)
